hphp/test/slow/dict/init-parse-error2.php.expectf
Fatal error: Key of collection element cannot be marked as reference in %s/test/slow/dict/init-parse-error2.php on line 4